--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
-    <script src="style.css" defer></script>
+    <script src="style.css"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Task Manager</h1>
+    <p>Task</p>
+    <input type="text" id="task">
+    <p>Important</p>
+    <input type="checkbox" id="checkbox"> 
+    <button type="submit" id="subButt">Submit</button>
+    <br>
+    <h2 id="listTask">Tasks</h2>
+    <div id="taskmanager">
+
+    </div>
+
 </body>
 </html>
