added [riorty thing and now my list won't work. saying i cant acces b4 init but it is defined b4 that

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <h1>Task Manager</h1>
     <p>Task</p>
     <input type="text" id="task">
+    <p>Priority</p>
+    <select id="priorities">
+        <option id="low">low</option>
+        <option id="medium">medium</option>
+        <option id="high">high</option>
+    </select>
     <p>Important</p>
     <input type="checkbox" id="checkbox"> 
     <button type="submit" id="subButt">Submit</button>
