--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="style.css"></script>
+    <script src="stylesheet.css"></script>
     <script src="script.js" defer></script>
     
     <title>Document</title>
@@ -20,6 +20,7 @@
     </select>
     <p>Important</p>
     <input type="checkbox" id="checkbox"> 
+    <br>
     <button type="submit" id="subButt">Submit</button>
     <br>
     <h2 id="listTask">Tasks</h2>
